# antarcticom

./: .gitignore  README.md  RELEASE_NOTES_DRAFT.md  deploy.sh
.agent/workflows/: git-pull.md
.gemini/: rules
.github/workflows/: release.yml
client/: README.md  analyze.txt  analyze2.txt  analyze_output.txt  icons_error.txt  pubspec.yaml
client/lib/: main.dart
client/lib/core/: api_service.dart  auth_provider.dart  channel_provider.dart  connection_manager.dart  member_provider.dart  message_provider.dart  role_provider.dart  router.dart  server_provider.dart  settings_provider.dart  socket_service.dart  theme.dart  update_service.dart  voice_provider.dart
client/lib/core/models/: member.dart  permissions.dart  role.dart  user.dart
client/lib/features/: background_wrapper.dart
client/lib/features/auth/: login_screen.dart  register_screen.dart
client/lib/features/chat/: channel_screen.dart
client/lib/features/home/: animated_themes.dart  background_manager.dart  home_screen.dart  liquid_glass_background.dart  member_list.dart  rainbow_builder.dart  shooting_star_widget.dart  starfield_widget.dart
client/lib/features/settings/: edit_role_screen.dart  roles_screen.dart  settings_screen.dart
client/test/: widget_test.dart
client/tmp/: home_fixer.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
client/windows/runner/: Runner.rc  main.cpp
docker/: Dockerfile.server  docker-compose.community.yml  docker-compose.yml
docs/: architecture.md  deployment.md  installer.md  self-hosting.md
installer/: antarcticom.iss  build.ps1  generate_bmps.ps1
proto/: auth.proto  events.proto  messages.proto  voice.proto
server/: Cargo.toml  README.md  antarcticom.toml  build.rs  cargo_warnings.txt  check.txt  check_output.txt  errors.txt  remaining_errors.txt  remaining_warnings.txt  sorted_warnings.txt  warnings.json
server/migrations/: 001_initial.sql  002_add_bans_table.sql  003_add_message_is_deleted.sql
server/src/: api.rs  auth.rs  chat.rs  config.rs  crypto.rs  db.rs  error.rs  main.rs  models.rs  presence.rs  voice.rs
