[package]
name = "antarcticom-server"
version = "0.1.0"
edition = "2021"
description = "Antarcticom server — next-generation communication platform"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.12"
prost-types = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Auth & Crypto
argon2 = "0.5"
jsonwebtoken = "9"
ring = "0.17"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["serde"] }

# QUIC transport (for voice)
quinn = "0.11"
rustls = "0.22"

# Opus codec
audiopus = "0.3.0-rc.0"

# Configuration
toml = "0.8"
config = "0.14"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"

[build-dependencies]
prost-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
