[package]
name = "antarcticom-server"
version = "0.1.0"
edition = "2021"
description = "Antarcticom server — next-generation communication platform"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Auth & Crypto
argon2 = "0.5"
jsonwebtoken = "9"
ring = "0.17"
rand = "0.8"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["serde"] }

# WebRTC transport (for voice)
webrtc = "0.11"


# Configuration
toml = "0.8"
config = "0.14"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
lto = "thin"
codegen-units = 16
strip = true
opt-level = 3
